# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-08-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add set_x_forwarded_for as a configuration parameter for
      cloudi_service_http_cowboy

2013-08-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add content_types_accepted as a configuration parameter for
      cloudi_service_http_cowboy
    * Add "status" key usage from ResponseInfo within
      cloudi_service_http_cowboy

2013-08-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the CloudI Service API services_add function to return the
      newly created service_ids
    * Add status_code_timeout as a configuration parameter for
      cloudi_service_http_cowboy

2013-08-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.2.5 (beta) released

2013-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Provide a readable format for the CloudI Service API output of
      services and services_search when returning a service's service options

2013-08-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Move cloudi_core startup of cloudi_services_internal,
      cloudi_services_databases, and cloudi_services_messaging into the
      cloudi_core configuration sequence
    * Do not use the /tmp/cloudi path

2013-07-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify CloudI Erlang release
    * Fix configure sequence, so it remains decoupled from application startup

2013-07-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add get_pids function to the internal service CloudI API
      (the cloudi_service module)
    * Add internal service module reload functionality with the
      "reload" to the service configuration options
    * Add the possibility of changing the service scope to alter what
      cpg scope is used for service name lookup operations, with the
      "scope" option in the service configuration options